--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Gadalka</string>
     <string name="random_button">Generate your properties</string>
     <string name="random_quote">ME BORED</string>
-    <string name="random_joke">ANEKDOT\n</string>
+    <string name="random_joke">ANEKDOT</string>
     <string name="exit">EXIT</string>
     <string name="enter_name">Entire name</string>
     <string name="fragment_navigation_example">Title)</string>
