--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="exit">EXIT</string>
     <string name="enter_name">Entire name</string>
     <string name="fragment_navigation_example">Title)</string>
+    <string name="testValue">test_name\n</string>
 </resources>
